--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -1,3 +1,5 @@
+@use "../../css/Generic.scss";
+
 .Banner {
     border: 2px solid black;
     background: white;
@@ -5,11 +7,30 @@
     
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    align-items: flex-start;
+
+    & > * {
+        margin: auto 7.5px;
+        padding: 0;
+    }
+    & > :first-child {
+        margin: auto 7.5px auto 15px;
+    }
+    & > :last-child {
+        margin-right: 15px;
+    }
 }
 
-.Banner > * {
-    position: relative;
-    transform: translateY(15%);
-    padding-left: 15px;
+.Banner > svg {
+    fill: black;
+    transition: 125ms;
+
+    &:hover {
+        fill: Generic.$purple2;
+    }
+}
+
+.Icon {
+    width: fit-content;
+    height: fit-content;
 }
